# flutter-21-client

./: .gitignore  DEVELOPER_GUIDE.md  README.md  codemagic.yaml  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle  gradle.properties  settings.gradle
docs/: docs.json  index.html  package.json
lib/: main.dart
server/: .env.example  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json  test_signaling.js
server-rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  prometheus.yml
server-rust/.sqlx/: query-036994f1ed5ee45d528a9f0a4546aef871f5f89afc1d55e0c4ec2937d368c196.json  query-0d4a50e14bda5e55b57d3101d9c0c5c310c79bd060e196be2133d705238d7d9b.json  query-0ff5f92cf69a19e20751f2c1825ab99b8bd0974626aba638091887fce7607ce7.json  query-11b76206f79b69e0b209f25f56e760eb8fb35df9bdb41acbb94dbbcf9e57103f.json  query-1be813b88e4b73e5dbf872860621622e5d24daf554a666f23d12a3dc798f22a4.json  query-1ed74e1147f713c675e495a7429172ebef0f7664794d9bf6f5a721dd284c1558.json  query-207bdaffc3264476d2b3c4a58d7e8371a992b88a8c1daf62f49decd18c32087b.json  query-2b7e5b63d6ae3aa2b4aca79a657b7eddda76219d5ea25eb2e9c8736113c79bb2.json  query-565aa8362d73da23078dfaeefa65a9ee15ee74a09b8c3677388fa47b31d01fac.json  query-5c3e082a7117139c09ba6c5c1a5a5b5bc1226d16b75af017beac020da1129bc6.json  query-5dde9eced91d3dda660e229334fbb5bfa8962e2fdcb57c61670e880a19c2c17f.json  query-5e6751c72164595b18b149fd44c1d1d4d91e6e687df809885308a38b1051fb51.json  query-61d6c74468592b9a0af4ba5b4fe880fa9c0305c25592f8985f04c836c6afc0a6.json  query-696d2b931170ee46e58be069ee2423b2d90640f98c480b257ad9cb20ba116119.json  query-6b5937a5fd5b8234b42febd0bfa907475a965fa41df9a4809f622a515b7f3580.json  query-81b69b287b8453180fe6eaa6e490e58d9a32a0160a6e49d90ad8e6a8f9b065c8.json  query-83417d6eff0747b7a7f660e6f53af72849a2e76b4be925910cd2284301556a8a.json  query-8d52e06d8433de788b2d46e1f47e0afdc6a87d03e9f8b15709e8f449974c36f9.json  query-9b6b345c8a26e6d97ed29f708303a658c1f655f1b3b6937cc67896452881386e.json  query-a5cb1509a960cbdbe448d11949cfda5699652b1b2e5d8b5e074caf6ff82ad9f7.json  query-b3302520bcb914a38a6bbbf152fd7cebaa7d332edc3c8119b2af974f25f32642.json  query-bf8078b523ce638eba0e4e90ae7a549343d4af3e786dcdae939f0341d628cbd4.json  query-c3927e76e193b7a87f42fe5183ac4ffea258cadcb09450f6608bad1a6b256a0f.json  query-c93ac7476caee98d4557e188e47242e0c90464d2c587b81ba8599d98a3a3b059.json  query-cda7cc13a5fde7928b34657e8676de84abdc704e643c572084925d2ae323b9de.json  query-f587569f60be8bf70d8dc733de8114fcbdfed6fa3d6fc9937395e68bb8a34b3d.json  query-f7c3303863a0ffb088aa0321e08671a990403faf0a37bdd419f7852f73d527a1.json
server-rust/src/: config.rs  errors.rs  main.rs
server-rust/src/auth/: jwt.rs  middleware.rs  mod.rs
server-rust/src/crypto/: mod.rs
server-rust/src/db/: mod.rs  redis_store.rs
server-rust/src/metrics/: mod.rs
server-rust/src/routes/: auth.rs  contacts.rs  mod.rs
server-rust/src/signaling/: hub.rs  mod.rs  server.rs  sfu_relay.rs
web/: index.html  manifest.json
webclient/: index.html
(+56 files in other folders)
