[package]
name = "voicecall-server"
version = "1.0.0"
edition = "2021"
rust-edition = "2021"

[[bin]]
name = "voicecall-server"
path = "src/main.rs"

[dependencies]
# ── Async Runtime (multi-thread, work-stealing scheduler) ─────────────────
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3"
futures-util = "0.3"

# ── Web Framework ─────────────────────────────────────────────────────────
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# ── Database ──────────────────────────────────────────────────────────────
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# ── Redis (pub/sub + session store for horizontal scaling) ────────────────
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio"] }

# ── Serialization ─────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Authentication / Crypto ───────────────────────────────────────────────
argon2 = "0.5"                          # OWASP-recommended password hashing
jsonwebtoken = "9"                       # JWT (RFC 7519)
rand = { version = "0.8", features = ["getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# ── Signaling Message Encryption ─────────────────────────────────────────
aes-gcm = "0.10"                        # AES-256-GCM (AEAD)
hkdf = "0.12"                           # HKDF key derivation (RFC 5869)
sha2 = "0.10"                           # SHA-256/384/512
hex = "0.4"

# ── Concurrent Data Structures ────────────────────────────────────────────
dashmap = "5"                           # Lock-free concurrent HashMap

# ── Error Handling ────────────────────────────────────────────────────────
thiserror = "1"
anyhow = "1"

# ── Observability ─────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# ── Utilities ─────────────────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
once_cell = "1"
regex = "1"
governor = "0.6"                        # Rate limiting (token bucket)
nonzero_ext = "0.3"
bytes = "1"
http = "1"
headers = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
